<resources>
    <string name="app_name">Tourist Assistance App</string>
    <string name="title_home">Home</string>
    <string name="title_translator">Translator</string>
    <string name="title_touristspots">Activities</string>
    <string name="title_dictionary">Dictionary</string>
    <string name="title_about">Developers</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="speech_prompt">Say something&#8230;</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="listening">Listening …</string>
    <string name="location_image">Location Image</string>
    <string name="location_title">Location Title</string>
    <string name="location_description">Location Description</string>
    <string name="button_locate">Locate</string>
    <string name="speech_input">Input speech here</string>
    <string name="todo">TODO</string>
    <string name="outputSpeech">Output speech here</string>
    <string name="input">Input</string>
    <string name="output">Output</string>
    <string name="speak">Speak</string>
    <string name="chooseLanguage">Choose a Language</string>
    <string name="selectLanguage">Select Language</string>
    <string name="translate_lang">Translate</string>
    <string name="resultGoesHereText">Translated Words goes here</string>
    <string name="english">English</string>
    <string name="filipino">Filipino</string>
    <string name="cebuano">Cebuano</string>
    <string name="optionLanguages">See the words in these languages below</string>
    <string name="translationHere">Translation Here</string>
    <string name="convertText">Translate Text</string>
    <string name="convertSpeech">Translate Speech</string>
    <string name="speakTranslation">Speak Translation</string>
    <string-array name="languages">
        <item>English</item>
        <item>Cebuano</item>
        <item>Filipino</item>
    </string-array>
    <string name="permission_message">This app needs to record audio and recognize your speech.</string>
    <string name="sample_load_file">Sample Audio</string>
    <string name="title_activity_copy">copy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Lakbay Cebu</string>
    <string name="nav_header_subtitle">Cebu Tourist Guide with Dialect Translator</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="Translate">translate</string>
    <string name="textToSpeech">Translate Text</string>
    <string name="Translate_Speech">Translate Speech</string>
    <string name="title_discovery">Discover</string>
    <string name="nav_txt">Navigation</string>
    <string name="e_route">E-Route</string>
    <string name="speak_translation">Speak Translation</string>
    <string name="text_to_speech">Text To Speech</string>
    <string name="translate_text">Translate Text</string>
    <string name="speech_out">Speech Output Here</string>
    <string name="speechtotext">speechToText</string>
    <string name="translated_text_here">Translated Text Here</string>
    <string name="category_cafes"> Mountains in Cebu</string>
    <string name="category_hotel"> Falls in Cebu</string>
    <string name="category_fam_attract"> Beaches in Cebu</string>
    <string name="category_museums"> Festivals in Cebu</string>
    <string name="category_catacombs">Foods in Cebu</string>
    <string name="category_music">Songs in Cebu</string>
    <string name="one_hotel_name">Aguinid Falls</string>
    <string name="one_hotel_desc">Aguinid Falls is one of more than 11 waterfalls of the town of Samboan and perhaps the most popular of them all. It lies along the calcium-rich Tangbo River making the water beautifully turquoise and warm.</string>
    <string name="one_hotel_addr">Santander - Barili - Toledo Rd, Samboan, Cebu</string>
    <string name="one_hotel_work">N/A</string>
    <string name="one_hotel_tel">N/A</string>
    <string name="one_hotel_site">https://www.thepinaysolobackpacker.com/aguinid-falls/</string>
    <string name="two_hotel_name">Tumalog Falls</string>
    <string name="two_hotel_desc">Tumalog Falls, also called as "Toslob falls" or "Mag-ambak falls" situated in barangay Luka, southern part of Cebu, Philippines. It takes approximately two and a half hours to get to the area from Cebu City.</string>
    <string name="two_hotel_addr">Cebu South Rd, Oslob, Cebu</string>
    <string name="two_hotel_work">Friday	Open 24 hours
                                  \n\nSaturday	8am–5pm
                                  \n\nSunday	8am–5pm
                                  \n\nMonday	Open 24 hours
                                  \n\nTuesday   Open 24 hours
                                  \n\nWednesday	Open 24 hours
                                  \n\nThursday	Open 24 hours

</string>
    <string name="two_hotel_tel">0943 415 0072</string>
    <string name="two_hotel_site">http://meanttogo.com/get-awed-by-the-beauty-and-grandeur-of-tumalog-falls-in-oslob-cebu/</string>
    <string name="three_hotel_name">Kawasan Falls</string>
    <string name="three_hotel_desc">Kawasan Falls is one of the Philippines most famous waterfalls, and also one of the most famous in the world. Kawasan Falls is known to be a tropical oasis with big bamboo rafts that can take you around the turquoise natural pool, and under the waterfall.</string>
    <string name="three_hotel_addr">Badian, 6031 Cebu</string>
    <string name="three_hotel_work">OPEN 24 HRS</string>
    <string name="three_hotel_tel">0918 654 4111</string>
    <string name="three_hotel_site">https://www.christineabroad.com/kawasan-falls-guide/</string>
    <string name="four_hotel_name">Mantayupan Falls</string>
    <string name="four_hotel_desc">Barili, a municipality located at the southwest portion of Cebu, derived the towns name from a local grass that abundantly grows in the area called balili.One of Barilis tourist attractions is the Mantayupan Falls which is one of the highest waterfalls in the province. The falls is also locally known as the Ambakan Falls.</string>
    <string name="four_hotel_addr">Cebu, Barili, Unnamed Road</string>
    <string name="four_hotel_work">Friday	7am–5pm
            \n\nSaturday	7am–5pm
            \n\nSunday	    7am–5pm
            \n\nMonday	    7am–5pm
            \n\nTuesday     7am–5pm
            \n\nWednesday	7am–5pm
            \n\nThursday    7am–5pm
</string>
    <string name="four_hotel_tel"> N/A</string>
    <string name="four_hotel_site">https://www.choosephilippines.com/go/water-forms/4193/mantayupan-falls</string>
    <string name="five_hotel_name">BINALAYAN HIDDEN WATERFALLS</string>
    <string name="five_hotel_desc">“Beautiful things don’t ask for attention,” adventurer-photojournalist Sean O’Connell told Life negative assets manager Walter Mitty after seeing a magnificent but rare snow leopard through his camera. It may be just a quote from the 2013 adventure-comedy-drama movie The Secret Life of Walter Mitty. But the phrase rings true in real life—and in many destinations. The municipality of Samboan has its own gorgeous hidden wonder called Binalayan Falls in Barangay Bonbon.</string>
    <string name="five_hotel_addr">Bonbon, Samboan, Cebu、</string>
    <string name="five_hotel_work">Friday	8am–5pm
            \n\nSaturday	8am–5pm
            \n\nSunday	    8am–5pm
            \n\nMonday	    8am–5pm
            \n\nTuesday     8am–5pm
            \n\nWednesday	8am–5pm
            \n\nThursday    8am–5pm</string>
    <string name="five_hotel_tel">N/A</string>
    <string name="five_hotel_site">https://adrenalineromance.com/2016/03/04/binalayan-hidden-falls-three-flows-of-magic-beauty-and-charm/</string>
    <string name="six_hotel_name">DAU WATERFALLS</string>
    <string name="six_hotel_desc">For most Filipinos, staving off the intense tropical heat means going to the beaches. But what if you want to do something different? What if you are tired of crowded beaches but still want to go some place where you could cool off? Then head off to Samboan, the beautiful waterfall capital of southern Cebu. There you can take a cool, refreshing plunge in their pristine and magnificent waterfalls. One of those stunning natural wonders is the picturesque Dau Falls</string>
    <string name="six_hotel_addr">Santander - Barili - Toledo Rd, Samboan, Cebu</string>
    <string name="six_hotel_work">N/A</string>
    <string name="six_hotel_tel">N/A</string>
    <string name="six_hotel_site">https://adrenalineromance.com/2016/02/26/dau-falls-cooling-off-at-samboans-highest-waterfall//</string>
    <string name="montaneza_name">MONTANEZA WATERFALLS</string>
    <string name="montaneza_desc">The Montaneza River threads its way through a narrow ravine. It is a perfect setting for an unforgettable canyon tour. We abseil a set of five different waterfalls, climbing and jumping down the rapids. Once you rappel the first waterfall, there is no return anymore. On of the high lights are the descending of a 30 meter high waterfall with an overhang. On the end of the tour there are natural hot springs , where you can take a bath and relax after a very exciting adventure. The adrenaline pumping thrill and fun combined with incredible tropical nature is something you will remember for a long time.</string>
    <string name="montaneza_addr">Montañeza,, Malabuyoc, Cebu</string>
    <string name="montaneza_work">N/A</string>
    <string name="mpntaneza_tel">N/A</string>
    <string name="montaneza_site">https://www.thepinaysolobackpacker.com/inambakan-falls-travel-guide-itinerary-budget/</string>
    <string name="one_cafe_name">Osmeña Peak</string>
    <string name="one_cafe_desc">Osmeña Peak, the highest mountain in Cebu is a cluster of green jagged hills like a deformed twin of Chocolate Hills of Bohol  hugging the shorelines of Badian. </string>
    <string name="one_cafe_addr">Mantalongon, Dalaguete 6022, Philippines</string>
    <string name="one_cafe_work">N/A</string>
    <string name="one_cafe_tel">+N/A</string>
    <string name="one_cafe_site">https://www.thepinaysolobackpacker.com/osmena-peak-dalaguete-cebu//</string>
    <string name="two_cafe_name">Mt. Naupa</string>
    <string name="two_cafe_desc">Mt. Naupa is located in the City of Naga..the hike is perfect for that adrenalin craving especially for the beginners. </string>
    <string name="two_cafe_addr">Naga, Cebu</string>
    <string name="two_cafe_work">N/A</string>
    <string name="two_cafe_tel">N/A</string>
    <string name="two_cafe_site"> https://chasingpotatoes.com/2016/06/06/mt-naupa-climbing-the-almost-perfect-cone-of-nagas-highest-peak/</string>
    <string name="three_cafe_name">Mt. Kan-Irag (Sirao Peak)</string>
    <string name="three_cafe_desc">Sirao Peak is famous for trekkers as it is one of the most accessible mountains within the city. It has that picturesque green meadow panoramic scene below when you’re at its peak. </string>
    <string name="three_cafe_addr">Barangay Sibugay, Cebu City</string>
    <string name="three_cafe_work">N/A</string>
    <string name="three_cafe_tel">N/A</string>
    <string name="three_cafe_site">https://theficklefeet.com/mt-kan-irag/</string>
    <string name="four_cafe_name">Mt. Mauyog</string>
    <string name="descriptionSplashScreen">Cebu City Guide with Dialect Translator</string>
    <string name="splashText2">Dialect Translator</string>
    <string name="splashText1">With</string>
    <string name="splashText">Lakbay Cebu:</string>
    <string name="directions">DIRECTIONS</string>
    <string name="directionText">Helps you find a place in Cebu such as tourist spots</string>
    <string name="guide">Feel free to use me !</string>
</resources>