<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parentLayoutTranslator"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Spinner
        android:id="@+id/languageSelector"
        android:layout_width="wrap_content"
        android:layout_height="45sp"
        android:spinnerMode="dialog">

    </Spinner>

    <RelativeLayout
        android:id="@+id/childLayoutTranslator"
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:layout_below="@id/languageSelector">

        <EditText
            android:id="@+id/inputTextTranslator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/translate_text"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/translatedTextView"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/inputTextTranslator"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:text="@string/translated_text_here"
            android:textAlignment="center"
            android:textSize="19sp"/>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/childLayoutTranslator" >

        <ImageButton
            android:id="@+id/textTranslatorButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="80dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_button"
            android:contentDescription="@string/translate_text"
            android:src="@drawable/ic_image_buttons_translate" />

        <ImageButton
            android:id="@+id/speakTranslationButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_button"
            android:contentDescription="@string/speakTranslation"
            android:src="@drawable/ic_image_buttons_speaking"/>

        <ImageButton
            android:id="@+id/speechTranslatorSwitcher"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="80dp"
            android:background="@drawable/round_button"
            android:contentDescription="@string/speechtotext"
            android:src="@drawable/ic_image_buttons_speech"/>
    </RelativeLayout>
</RelativeLayout>