<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SpeechActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark">

        <include layout="@layout/capstone_speech_activity_item_result"/>

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:id="@+id/parentLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="95dp" >

        <Spinner
            android:id="@+id/selectLanguage"
            android:layout_width="wrap_content"
            android:layout_height="45sp"
            android:spinnerMode="dialog">
        </Spinner>

        <RelativeLayout
            android:id="@+id/childOne"
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <TextView
                android:id="@+id/STTOutput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/speech_out"
                android:textAlignment="center"
                android:textSize="19sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/childTwo"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@id/childOne">

            <ImageButton
                android:id="@+id/speakButton"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="80dp"
                android:background="@drawable/round_button"
                android:contentDescription="@string/speak_translation"
                android:src="@drawable/ic_image_buttons_speaking" />

            <ImageButton
                android:id="@+id/translateButton"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_centerInParent="true"
                android:background="@drawable/round_button"
                android:contentDescription="@string/translate_text"
                android:src="@drawable/ic_image_buttons_translate" />

            <ImageButton
                android:id="@+id/translateTextSwitcher"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="80dp"
                android:background="@drawable/round_button"
                android:contentDescription="@string/text_to_speech"
                android:src="@drawable/ic_image_buttons_translate_text" />

        </RelativeLayout>

    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>